some refactor and polish
