# docs/user_docs.go
@@ -1,9 +1,17 @@
 package docs
 
-// swagger:route GET /user User ListUsers
+// swagger:route GET /user/users User ListUsers
 // You receive an list of users
 // responses:
 //   200: userListResponse
+//   500: genericResponse
+
+/////////////////////////////////////////////////
+
+// swagger:route GET /user/{user_id} User GetUserById
+// You receive an list of users
+// responses:
+//   200: userResponse
 //   500: genericResponse
 
 /////////////////////////////////////////////////
